chore: incluindo components no App

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -4,6 +4,6 @@
   box-sizing: border-box;
 }
 body {
-  background-color: rgb(77, 147, 209);
-  color: rgb(63, 63, 182);
+  background-color: #1d1c21;
+  color: rgb(229, 229, 233);
 }
