chore: projeto estático concluído

--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -18,13 +18,14 @@
       align-items: center;
       justify-content: center;
     }
+
     h1 {
       margin-bottom: 8px;
       color: #cae2ff;
     }
     p {
       margin-bottom: 8px;
-      color: #abb475;
+      color: #8574e6;
     }
     h4 {
       color: #b4c5e1;
