!refector: criarndo link para o repositório

--- a/src/components/RepositoryItem/style.scss
+++ b/src/components/RepositoryItem/style.scss
@@ -24,7 +24,7 @@
     color: #b4c5e1;
   }
 
-  button {
+  a {
     font-family: Raleway;
     width: 60px;
     height: 25px;
@@ -33,5 +33,6 @@
     color: #cae2ff;
     border: 0;
     border-radius: 4px;
+    text-decoration: none;
   }
 }
