--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -12,24 +12,29 @@
       width: 1224px;
       height: 211px;
       max-width: 100%;
-      background-color: #2a2932;
+      background-color: #1e1630;
       border-radius: 8px;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
+      transition: all 0.8s;
     }
-
+    .box-headline:hover {
+      background-color: #261847;
+    }
     h1 {
       margin-bottom: 8px;
-      color: #cae2ff;
+      color: #f8f5f1;
+      font-weight: bold;
     }
     p {
       margin-bottom: 8px;
-      color: #8574e6;
+      color: #f8f5f1;
     }
     h4 {
-      color: #b4c5e1;
+      color: #f8f5f1;
+      font-size: 12px;
     }
   }
 }
