--- a/src/components/RepositoryItem/style.scss
+++ b/src/components/RepositoryItem/style.scss
@@ -1,50 +1,45 @@
-.container-gallery {
-  margin-top: 119px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+.card {
+  width: 23rem;
+  height: 18rem;
+  display: grid;
+  grid-template-rows: 30% 30% 40%;
+  border-radius: 0.8rem;
+  background-color: white;
+  align-items: center;
+  text-align: center;
+  margin: 5.688rem 2rem 1rem;
 
-  .content-gallery {
-    justify-content: space-between;
+  h1 {
+    font-size: 1.5rem;
+    color: var(--blue-900);
+  }
+
+  p {
+    font-size: 1rem;
+    color: var(--blue-700);
+    padding: 1rem;
+  }
+  a {
     display: flex;
-    flex-basis: 30%;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 392px;
-    height: 160px;
-    margin: 8px;
-    background-color: #1e1630;
-    text-align: center;
-    border-radius: 8px;
-    padding: 8px;
-    transition: all 0.8s;
-  }
-
-  .content-gallery:hover {
-    background-color: #2d2147;
-  }
-  strong {
-    color: #9886bd;
-    font-size: 18px;
-  }
-  p {
-    color: #e4d7f3;
-    margin-top: 8px;
-    font-size: 14px;
-  }
-
-  a {
-    font-family: Raleway;
-    margin-top: 16px;
-    color: #5e5179;
-    border: 0;
-    text-decoration: none;
+    background-color: var(--blue-200);
+    color: #ebf8ff;
+    width: 100%;
+    height: 4rem;
+    font-size: 2rem;
     font-weight: bold;
-    transition: all 0.2s;
+    outline: none;
+    border: none;
+    border-radius: 0px 0px 8px 8px;
+    cursor: pointer;
+    align-self: flex-end;
+    text-decoration: none;
+    transition: all 0.5s;
   }
+
   a:hover {
-    color: #8351e6;
-    font-size: 17px;
+    background-color: var(--blue-700);
+    font-size: 2.125rem;
   }
 }
